feat: begin work on integration foundation
