# gravitee-apim-rest-api/gravitee-apim-rest-api-management-v2/gravitee-apim-rest-api-management-v2-rest/src/main/java/io/gravitee/rest/api/management/v2/rest/GraviteeManagementV2Application.java
@@ -35,6 +35,7 @@ import io.gravitee.rest.api.management.v2.rest.resource.api.ApisResource;
 import io.gravitee.rest.api.management.v2.rest.resource.installation.EnvironmentsResource;
 import io.gravitee.rest.api.management.v2.rest.resource.installation.GraviteeLicenseResource;
 import io.gravitee.rest.api.management.v2.rest.resource.installation.OrganizationResource;
+import io.gravitee.rest.api.management.v2.rest.resource.integration.IntegrationsResource;
 import io.gravitee.rest.api.management.v2.rest.resource.plugin.EndpointsResource;
 import io.gravitee.rest.api.management.v2.rest.resource.plugin.EntrypointsResource;
 import io.gravitee.rest.api.management.v2.rest.resource.plugin.PoliciesResource;
@@ -69,6 +70,7 @@ public class GraviteeManagementV2Application extends ResourceConfig {
         register(EndpointsResource.class);
         register(EntrypointsResource.class);
         register(PoliciesResource.class);
+        register(IntegrationsResource.class);
 
         register(MultiPartFeature.class);
 
